--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
-    <link href="css/freelancer.min.css" rel="stylesheet">
+    <link href="css/freelancer.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <script src="js/functions.js"></script>
+
 
   </head>
 
@@ -98,12 +100,7 @@
 
           </div>
         </div>
-        <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="#">
-            <i class="fa fa-download mr-2"></i>
-            Download Now!
-          </a>
-        </div>
+
       </div>
     </section>
 
@@ -119,19 +116,24 @@
 
         <!-- 1st -->
               <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-                  <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                <a class="portfolio-item d-block mx-auto" onclick="openInNewTab('https://mobilemedsites.com/');">
+
+
+                  <div class="portfolio-item-caption d-flex position-absolute h-100 w-100" >
+
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                       <i class="fa fa-eye fa-3x"></i>
                     </div>
                   </div>
+
+
                   <img class="img-fluid" src="img/portfolio/MMS.png" alt="">
                 </a>
               </div>
 
         <!-- 2nd -->
               <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
+                <a class="portfolio-item d-block mx-auto"  onclick="openInNewTab('http://mountainsidepeds.com/');">
                   <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                       <i class="fa fa-eye fa-3x"></i>
@@ -143,7 +145,7 @@
 
         <!-- 3rd -->
               <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
+                <a class="portfolio-item d-block mx-auto" onclick="openInNewTab('http://www.poweredbypush.com/');">
                   <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                       <i class="fa fa-eye fa-3x"></i>
@@ -156,7 +158,7 @@
 
         <!-- 4th -->
               <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
+                <a class="portfolio-item d-block mx-auto" onclick="openInNewTab('http://www.sabeelsiddiqi.com/');">
                   <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                       <i class="fa fa-eye fa-3x"></i>
@@ -169,7 +171,7 @@
 
         <!-- 5th -->
               <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
+                <a class="portfolio-item d-block mx-auto" onclick="openInNewTab('http://www.stratosolutions.com/');">
                   <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                       <i class="fa fa-eye fa-3x"></i>
@@ -182,7 +184,7 @@
 
         <!-- 6th -->
               <div class="col-md-6 col-lg-4">
-                <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
+                <a class="portfolio-item d-block mx-auto" onclick="openInNewTab('http://www.sabeelandoozma.com/');">
                   <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                     <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                       <i class="fa fa-eye fa-3x"></i>
@@ -254,7 +256,7 @@
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Information</h4>
             <a class="lead mb-0" href="tel:+14044340815">404-434-0815</a></br>
-<a class="lead mb-0" href="mailto:sid@websitesid.com?Subject=Howdy%20Website%20Sid" target="_top">sid@websitesid.com</a>
+<a class="lead mb-0" href="mailto:sid@websitesid.com?Subject=Howdy%20Website%20Sid" target="_top">sid@webdesignsid.com</a>
 
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
@@ -312,7 +314,7 @@
     <!-- Portfolio Modals -->
 
     <!-- Portfolio Modal 1 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -333,10 +335,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 2 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-2">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-2">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -355,10 +357,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 3 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -377,10 +379,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -399,10 +401,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -421,10 +423,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 6 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -443,7 +445,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -458,7 +460,7 @@
     <script src="js/contact_me.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/freelancer.min.js"></script>
+    <script src="js/freelancer.js"></script>
 
   </body>
 
