--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="css/freelancer.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <script src="js/functions.js"></script>
-
+    <meta name="google-site-verification" content="W9-_CidyN99-dGlNSZK0KVhHOYPfDBmhoNQAkZ-w1pA" />
 
   </head>
 
@@ -290,8 +290,8 @@
             </ul> -->
           </div>
           <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Freelancer</h4>
-            <p class="lead mb-0">Get to know Website Sid!
+            <h4 class="text-uppercase mb-4">Get to know</h4>
+            <p class="lead mb-0"> Sabeel Siddiqi </br>
               <a href="http://www.sabeelsiddiqi.com">www.sabeelsiddiqi.com</a></p>
           </div>
         </div>
